--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,11 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div id="startLoadPage">
+      <div class="startLoadPageImg">
+        <img src="./img/logo.jpg" />
+      </div>
+      <p>欢迎来到盘龙的世界</p>
+    </div>
   </body>
 </html>
